crates/toml/tests/snapshots/invalid/string/bad-uni-esc-ml-03.stderr
TOML parse error at line 1, column 36
  |
1 | bad-uni-esc-ml-03 = """val\U0000000"""
  |                                    ^
too few unicode value digits, expected unicode hexadecimal value
